--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 <body style="background-color: blue;">
  <header>
- <h1>Welcome to My Website!</h1>
-</header>
+   <h1>Welcome to My Website!</h1>
+   <nav>
+     <a href="index.html">Home</a> |
+     <a href="about.html">About</a> |
+     <a href="contact.html">Contact</a>
+   </nav> 
+ </header>
 
 <main>
   <p>This is a simple webpage hosted on GitHub Pages.</p>
