--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <main>
   <p>This is a simple webpage hosted on GitHub Pages.</p>
   <p>Here's a picture of a cute cat:</p>
-  https://tse3.mm.bing.net/th/id/OIP.i31yHGVGsnPs2Hmy9X8gvAHaGM?rs=1&pid=ImgDetMain&o=7&rm=3
+ <img 
+src="https://tse3.mm.bing.net/th/id/OIP.i31yHGVGsnPs2Hmy9X8gvAHaGM?rs=1&pid=ImgDetMain&o=7&rm=3 alt="A cute kitten"
+  width="300">
 
   <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 
