--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,9 @@
  
   
   <main>
-    <p>If you'd like to get in touch, feel free to email me at <a href="mailto:Cse25-281@thuto.bac.ab.bw.com"></a>.</p>
+<main class="comtainer my-5">
+    <h2>Contact Me</h2>
+    <p>If you'd like to get in touch, feel free to email me at <a href="mailto:Cse25-281@thuto.bac.ac.bw.com"></a>.</p>
   </main>
  
   
