--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>My First GitHub Page</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap CSS --> 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
+  rel="stylesheet"> 
 </head>
 <body style="background-color: blue;">
  <header>
@@ -96,7 +97,8 @@
  </footer>
   <!-- Bootstrap JS and dependencies --> 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script> 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js">
+  </script> 
 </body>
 </html>
 
