--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
   <title>About Me</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap CSS -->
-  <link rel="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> 
+  <link rel="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  rel="stylesheet"> 
 </head>
   <body>
  <header>
