--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <p>Here's a picture of a cute cat:</p> 
 
-            <img src="https://placekitten.com/200/300" alt="A cute kitten" class="img-fluid rounded"> 
+            <img src="https://tse3.mm.bing.net/th/id/OIP.vhzNQZDm_KwgapfMoNFsDwHaE7?rs=1&pid=ImgDetMain&o=7&rm=3" alt="A cute kitten" class="img-fluid rounded"> 
 
             <p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p> 
 
